--- a/.travis.yml
+++ b/.travis.yml
@@ -17,26 +17,14 @@ matrix:
       env: CXX_EVAL="g++-7" CC_EVAL="gcc-7" BUILD_TYPE='Debug'
 
     - os: linux
-      compiler: clang
-      env: BUILD_TYPE='Release' CXX_EVAL="clang++-5.0" CC_EVAL="clang-5.0"
       addons:
         apt:
           sources:
-            - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-5.0 main' 
-              key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'
-            - ubuntu-toolchain-r-test
-          packages: ['clang-5.0']
-
-    - os: linux
-      compiler: clang
-      env: BUILD_TYPE='Debug' CXX_EVAL="clang++-5.0" CC_EVAL="clang-5.0"
-      addons:
-        apt:
-          sources:
-            - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-5.0 main' 
-              key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'
-            - ubuntu-toolchain-r-test
-          packages: ['clang-5.0']
+            - llvm-toolchain-trusty-5.0
+          packages:
+            - clang-5.0
+      env:
+        - MATRIX_EVAL="CC=clang-5.0 && CXX=clang++-5.0"
           
     - os: osx
       osx_image: xcode8.3
